advance pattern question sols

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <!-- <script src="./BASICPROGRAM/ReverseTriangle.js"></script> -->
     <!-- <script src="./BASICPROGRAM/NumericHollowHalfPyramid.js"></script> -->
     <!-- <script src="./BASICPROGRAM/NumericHollowInvertedHalfPyramid.js"></script> -->
-    <script src="./BASICPROGRAM/NumericPalindromEquilateral.js"></script>
+    <!-- <script src="./BASICPROGRAM/NumericPalindromEquilateral.js"></script> -->
+    <!-- <script src="./BASICPROGRAM/SolidHalfPyramid.js"></script> -->
+    <!-- <script src="./BASICPROGRAM/FancyPattern1.js"></script> -->
+    <!-- <script src="./BASICPROGRAM/FancyPattern3.js"></script> -->
+    <script src="./BASICPROGRAM/FloydsTriangle.js"></script>
     <title>Document</title>
 </head>
 <body>
