--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./BASICPROGRAM/SolidHalfPyramid.js"></script> -->
     <!-- <script src="./BASICPROGRAM/FancyPattern1.js"></script> -->
     <!-- <script src="./BASICPROGRAM/FancyPattern3.js"></script> -->
-    <script src="./BASICPROGRAM/FloydsTriangle.js"></script>
+    <!-- <script src="./BASICPROGRAM/FloydsTriangle.js"></script> -->
+    <script src="./ARRAY/SortColor.js"></script>
     <title>Document</title>
 </head>
 <body>
