array questions sol day4

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- <script src="./BASICPROGRAM/FancyPattern1.js"></script> -->
     <!-- <script src="./BASICPROGRAM/FancyPattern3.js"></script> -->
     <!-- <script src="./BASICPROGRAM/FloydsTriangle.js"></script> -->
-    <script src="./ARRAY/SortColor.js"></script>
+    <!-- <script src="./ARRAY/SortColor.js"></script> -->
+    <!-- <script src="./ARRAY/WavePrintMatrix.js"></script> -->
+    <script src="./ARRAY/SpiralPrint.js"></script>
     <title>Document</title>
 </head>
 <body>
