--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="./BASICPROGRAM/FloydsTriangle.js"></script> -->
     <!-- <script src="./ARRAY/SortColor.js"></script> -->
     <!-- <script src="./ARRAY/WavePrintMatrix.js"></script> -->
-    <script src="./ARRAY/SpiralPrint.js"></script>
+    <!-- <script src="./ARRAY/SpiralPrint.js"></script> -->
+    <script src="./SEARCHING/BinarySearch/FirstOrLastOccurances.js"></script>
     <title>Document</title>
 </head>
 <body>
