--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <!-- <script src="./ARRAY/SortColor.js"></script> -->
     <!-- <script src="./ARRAY/WavePrintMatrix.js"></script> -->
     <!-- <script src="./ARRAY/SpiralPrint.js"></script> -->
-    <script src="./SEARCHING/BinarySearch/FirstOrLastOccurances.js"></script>
+    <!-- <script src="./SEARCHING/BinarySearch/FirstOrLastOccurances.js"></script> -->
+    <!-- <script src="./ARRAY/PairDiffByK.js"></script> -->
+    <!-- <script src="./SEARCHING/BinarySearch/FindDiffByK.js"></script> -->
+    <script src="./SEARCHING/BinarySearch/DivideTwoNum.js"></script>
     <title>Document</title>
 </head>
 <body>
