leetcode Binary search

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <!-- <script src="./SEARCHING/BinarySearch/FirstOrLastOccurances.js"></script> -->
     <!-- <script src="./ARRAY/PairDiffByK.js"></script> -->
     <!-- <script src="./SEARCHING/BinarySearch/FindDiffByK.js"></script> -->
-    <script src="./SEARCHING/BinarySearch/DivideTwoNum.js"></script>
+    <!-- <script src="./SEARCHING/BinarySearch/DivideTwoNum.js"></script> -->
+    <!-- <script src="./SEARCHING/BinarySearch/PotionsSpell.js"></script> -->
+    <script src="./SEARCHING/BinarySearch/findPeak.js"></script>
     <title>Document</title>
 </head>
 <body>
