--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!-- <script src="./SEARCHING/BinarySearch/FindDiffByK.js"></script> -->
     <!-- <script src="./SEARCHING/BinarySearch/DivideTwoNum.js"></script> -->
     <!-- <script src="./SEARCHING/BinarySearch/PotionsSpell.js"></script> -->
-    <script src="./SEARCHING/BinarySearch/findPeak.js"></script>
+    <!-- <script src="./SEARCHING/BinarySearch/findPeak.js"></script> -->
+    <script src="./STRING/GCDOFSTR.js"></script>
     <title>Document</title>
 </head>
 <body>
